# llp-database

./: CMakeLists.txt  README.md  main.cpp
commands/: commands.cpp  commands.h  schema_validation.h
commands/iterator/: result_iterator.cpp  result_iterator.h
data_process_utils/serialization/: serialization.cpp  serialization.h
data_process_utils/validation/: schema_validation.cpp  schema_validation.h
dbstruct/: file_data.cpp  file_data.h  node.cpp  node.h  serialization.h  tree_header.cpp  tree_header.h
file_workers/: file_utils.cpp  file_utils.h
test/: graphic.py  test.cpp  test.h
test/generator/: random_generator.cpp  random_generator.h
